deposit: partial Finish

--- a/locales/en_US.json
+++ b/locales/en_US.json
@@ -8,7 +8,7 @@
   "navPortfolio": "Porfolio",
   "navAboutus": "About us",
   "handleTags": "Handle Tags",
-  "landingTitle": "Welcome to image tagger program",
+  "landingTitle": "Welcome to BNB ATM",
   "landingCaption": "We Make",
   "landingDinamicServOne": "Mobile Applications",
   "landingDinamicServTwo": "Desktop Applications",
