--- a/locales/es_ES.json
+++ b/locales/es_ES.json
@@ -8,7 +8,7 @@
   "navPortfolio": "Portafolio",
   "handleTags": "Administrar Etiquetas",
   "navAboutus": "Acerca de",
-  "landingTitle": "Bienvenido al programa de etiquetado de imagenes",
+  "landingTitle": "Bienvenido al Cajero Automatico del BNB",
   "landingCaption": "Realizamos",
   "landingDinamicServOne": "Aplicaciones Moviles",
   "landingDinamicServTwo": "Aplicaciones de Escritorio",
